Agent - fanuc iSeries/Distribution/30iHSSB/Fwlib32.h


typedef struct iodbzofs {
    short   datano ;            
    short   type ;              
    long    data[MAX_AXIS] ;    
} IODBZOFS ;
typedef struct iodbzor {
    short   datano_s ;  
    short   type ;      
    short   datano_e ;  
    long    data[8*MAX_AXIS] ;  
} IODBZOR ; 
typedef struct odbdsdir {
    long    file_num ;
    long    remainder ;
    short   data_num ;
    struct {
        char    file_name[16] ;
        char    comment[64] ;
        long    size ;
        char    date[16] ;
    } data[32] ;
} ODBDSDIR ;
typedef struct iodbdsset {
	char host_ip[16] ;
	char host_uname[32] ;
	char host_passwd[32] ;
	char host_dir[128] ;
	char dtsv_mac[13] ;
	char dtsv_ip[16] ;
	char dtsv_mask[16] ;
} IODBDSSET ;
typedef struct odbdsmnt {
	long empty_cnt ;
	long total_size ;
	long read_ptr ;
	long write_ptr ;
} ODBDSMNT ;
typedef struct odbpser {
    long    poserr1 ;
    long    poserr2 ;
} ODBPSER ;
typedef struct odbspdi {
    char    sgnl1 ;
    char    sgnl2 ;
    char    sgnl3 ;
    char    sgnl4 ;
} ODBSPDI ;
typedef struct odbspdo {
    char    sgnl1 ;
    char    sgnl2 ;
    char    sgnl3 ;
    char    sgnl4 ;
} ODBSPDO ;
typedef struct iodbwave {
    short   condition ;
    char    trg_adr ;
    char    trg_bit ;
    short   trg_no ;
    short   delay ;
    short   t_range ;
    struct {
        short   kind ;
        union {
#if MAX_AXIS > 16
            long        axis ;
#else
            short       axis ;
#endif
            struct {
                char    adr ;
                char    bit ;
                short   no ;
            } io ;
        } u ;
    } ch[12] ;
} IODBWAVE ;
typedef struct iodbwvprm {
    short   condition ;
    char    trg_adr ;
    char    trg_bit ;
    short   trg_no ;
    short   reserve1 ;
    long    delay ;
    long    t_range ;
    struct {
        short   kind ;
        union {
            long    axis ;
            struct {
                char    adr ;
                char    bit ;
                short   no ;
            } io ;
        } u ;
        long    reserve2 ;
    } ch[12] ;
} IODBWVPRM ;
typedef struct odbwvdt {
    short   channel ;
    short   kind ;
    union {
        short   axis ;
        struct {
            char    adr ;
            char    bit ;
            short   no ;
        } io ;
    } u ;
    char    year ;
    char    month ;
    char    day ;
    char    hour ;
    char    minute ;
    char    second ;
    short   t_cycle ;
    short   data[8192] ;
} ODBWVDT ;
typedef struct odbmgrp {
	long  m_code ;
	short grp_no ;
	char  m_name[21] ;
	char  dummy ;
} ODBMGRP;
typedef struct idbmgrp {
	short s_no ;
	short dummy ;
	short num ;
	short group[500] ;
} IDBMGRP ;
typedef struct odbexem {
    short	grp_no;
    short	mem_no;
    struct{
	long	no;
	short	flag;
    }m_code[5];
    char	m_name[21];
    char	dummy;
} ODBEXEM;
typedef struct odbrstrm {
    short	grp_no;
    short	mem_no;
    struct{
	long	no;
	short	flag;
    }m_code[5];
} ODBRSTRM;
typedef struct odbptime {
	short	num;
	struct{
		long	prg_no;
		short	hour;
		char	minute;
		char	second;
	}data[10];
} ODBPTIME;
typedef struct prgdirtm {
	long	prg_no;
	char	comment[51];
	char	cuttime[13];
} PRGDIRTM;
typedef struct prgdir2 {
	short	number ;
	long	length ;
	char	comment[51] ;
	char	dummy ;
} PRGDIR2;
typedef struct iodbcprm {
	char           NcApli[65] ;
	char           Dummy1 ;
	char           HostApli[65] ;
	char           Dummy2 ;
	unsigned long  StatPstv ;
	unsigned long  StatNgtv ;
	unsigned long  Statmask ;
	unsigned long  AlarmStat ;
	unsigned long  PsclHaddr ;
	unsigned long  PsclLaddr ;
	unsigned short SvcMode1 ;
	unsigned short SvcMode2 ;
	long           FileTout ;
	long           RemTout ;
} IODBCPRM ;
typedef	struct  iodbint {
	short   datano_s;	
	short   type;		
	short   datano_e;	
	long	data[24];	
} IODBINT ;
typedef struct iodbtimer {
	short	type ;
	short	dummy ;
	union {
		struct {
			short	year ;
			short	month ;
			short	date ;
		} date ;
		struct {
			short	hour ;
			short	minute ;
			short	second ;
		} time ;
	} data ;
} IODBTIMER ;
typedef struct odbbrs {
    long dest[MAX_AXIS];
    long dist[MAX_AXIS];
} ODBBRS ;		
typedef struct odbrofs {
    short mode;
    short pln_axes[2];
    long ofsvct[2];
} ODBROFS ;
typedef struct odblofs {
    short mode;
    long ofsvct[MAX_AXIS];
} ODBLOFS ;		
typedef struct odbfix {
    short mode;
    short pln_axes[2];
    short drl_axes;
    long i_pos;
    long r_pos;
    long z_pos;
    long cmd_cnt;
    long act_cnt;
    long cut;
    long shift[2];
} ODBFIX ;
typedef struct odbrot {
    short mode;
    short pln_axes[2];
    long center[2];
    long angle;
} ODBROT ;
typedef struct odb3dcd {
    short mode;
    short dno;
    short cd_axes[3];
    long center[2][3];
    long direct[2][3];
    long angle[2];
} ODB3DCD ;
typedef struct odbmir {
    short mode;
    long mir_flag;
    long mir_pos[MAX_AXIS];
} ODBMIR ;		
typedef struct odbscl {
    short mode;
    long center[MAX_AXIS];
    long magnif[MAX_AXIS];
} ODBSCL ;		
typedef struct odb3dto {
    short mode;
    short ofs_axes[3];
    long ofsvct[3];
} ODB3DTO ;
typedef struct odbpofs {
    short mode;
    long ofsvct[MAX_AXIS];
} ODBPOFS ;		
typedef struct iodbhpst {
    short       slct ;
    short       hpcc ;
    short       multi ;
    short       ovr1 ;
    short       ign_f ;
    short       foward ;
    long        max_f ;
    short       ovr2 ;
    short       ovr3 ;
    short       ovr4 ;
    long        reserve[7] ;
} IODBHPST ;
typedef struct iodbhppr {
    struct {
        short   slct ;
        short   diff ;
        short   fine ;
        short   acc_lv ;
        long    max_f ;
        short   bipl ;
        short   aipl ;
        long    corner ;
        short   clamp ;
        long    radius ;
        long    max_cf ;
        long    min_cf ;
        long    foward ;
        long    reserve[5] ;
    }tune[3] ;
} IODBHPPR ;
typedef struct iodbhpac {
    struct {
        short   slct ;
        short   diff ;
        short   fine ;
        short   acc_lv ;
        long    bipl ;
        short   aipl ;
        long    corner ;
        long    clamp ;
        long    c_acc ;
        long    foward ;
        long    reserve[8] ;
    }tune[3] ;
} IODBHPAC ;
typedef struct odb3dhdl {
	short	axes[5] ;
	long	data[5] ;
} ODB3DHDL ;
typedef struct odb3dpls {
	long	right_angle_x ;
	long	right_angle_y ;
	long	tool_axis     ;
	long	tool_tip_a_b  ;
	long	tool_tip_c    ;
} ODB3DPLS ;
typedef struct prgdir2o8 {
	long	number ;
	long	length ;
	char	comment[51] ;
	char	dummy ;
} PRGDIR2O8;
FWLIBAPI short WINAPI cnc_dtsvftpget( unsigned short, char *, char * ) ;
FWLIBAPI short WINAPI cnc_dtsvftpput( unsigned short, char *, char * ) ;
FWLIBAPI short WINAPI cnc_dtsvftpstat( unsigned short ) ;
FWLIBAPI short WINAPI cnc_dtsvrdpgdir( unsigned short, char *, short, ODBDSDIR * ) ;
FWLIBAPI short WINAPI cnc_dtsvdelete( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_dtsvdownload( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_dtsvupload( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_dtsvcnclupdn( unsigned short ) ;
FWLIBAPI short WINAPI cnc_dtsvupdnstat( unsigned short ) ;
FWLIBAPI short WINAPI cnc_dtsvgetdncpg( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_dtsvsetdncpg( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_dtsvrdset( unsigned short, IODBDSSET * ) ;
FWLIBAPI short WINAPI cnc_dtsvwrset( unsigned short, IODBDSSET * ) ;
FWLIBAPI short WINAPI cnc_dtsvchkdsk( unsigned short ) ;
FWLIBAPI short WINAPI cnc_dtsvhdformat( unsigned short ) ;
FWLIBAPI short WINAPI cnc_dtsvsavecram( unsigned short ) ;
FWLIBAPI short WINAPI cnc_dtsvrdcram( unsigned short, long, long *, char * ) ;
FWLIBAPI short WINAPI cnc_dtsvmntinfo( unsigned short, ODBDSMNT * ) ;
FWLIBAPI short WINAPI cnc_dtsvgetmode( unsigned short, short * ) ;
FWLIBAPI short WINAPI cnc_dtsvsetmode( unsigned short, short ) ;
FWLIBAPI short WINAPI cnc_dtsvrderrmsg( unsigned short, short, char * ) ;
FWLIBAPI short WINAPI cnc_rdopmode( unsigned short, short * ) ;
FWLIBAPI short WINAPI cnc_rdposerrs( unsigned short, long * ) ;
FWLIBAPI short WINAPI cnc_rdposerrs2( unsigned short, ODBPSER * ) ;
FWLIBAPI short WINAPI cnc_rdposerrz( unsigned short, long * ) ;
FWLIBAPI short WINAPI cnc_rdsynerrsy( unsigned short, long * ) ;
FWLIBAPI short WINAPI cnc_rdsynerrrg( unsigned short, long * ) ;
FWLIBAPI short WINAPI cnc_rdspdlalm( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_rdctrldi( unsigned short, ODBSPDI * ) ;
FWLIBAPI short WINAPI cnc_rdctrldo( unsigned short, ODBSPDO * ) ;
FWLIBAPI short WINAPI cnc_rdnspdl( unsigned short, short * ) ;
FWLIBAPI short WINAPI cnc_rdfbusmem( unsigned short, short, short, long, long, void * ) ;
FWLIBAPI short WINAPI cnc_wrfbusmem( unsigned short, short, short, long, long, void * ) ;
FWLIBAPI short WINAPI cnc_rdwaveprm( unsigned short, IODBWAVE * ) ;
FWLIBAPI short WINAPI cnc_wrwaveprm( unsigned short, IODBWAVE * ) ;
FWLIBAPI short WINAPI cnc_rdwaveprm2( unsigned short, IODBWVPRM * ) ;
FWLIBAPI short WINAPI cnc_wrwaveprm2( unsigned short, IODBWVPRM * ) ;
FWLIBAPI short WINAPI cnc_wavestart( unsigned short ) ;
FWLIBAPI short WINAPI cnc_wavestop( unsigned short ) ;
FWLIBAPI short WINAPI cnc_wavestat( unsigned short, short * ) ;
FWLIBAPI short WINAPI cnc_rdwavedata( unsigned short, short, short, long, long *, ODBWVDT * ) ;
FWLIBAPI short WINAPI cnc_rdmgrpdata( unsigned short, short, short *, ODBMGRP * ) ;
FWLIBAPI short WINAPI cnc_wrmgrpdata( unsigned short, IDBMGRP * ) ;
FWLIBAPI short WINAPI cnc_rdexecmcode( unsigned short, short, short *, ODBEXEM * );
FWLIBAPI short WINAPI cnc_rdrstrmcode( unsigned short, short, short *, ODBRSTRM * );
FWLIBAPI short WINAPI cnc_rdproctime( unsigned short, ODBPTIME * ) ;
FWLIBAPI short WINAPI cnc_rdprgdirtime( unsigned short, long *, short *, PRGDIRTM * ) ;
FWLIBAPI short WINAPI cnc_rdprogdir2( unsigned short, short, short *, short *, PRGDIR2 * ) ;
FWLIBAPI short WINAPI cnc_rddncfname( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_wrdncfname( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_rdcomparam( unsigned short, IODBCPRM * ) ;
FWLIBAPI short WINAPI cnc_wrcomparam( unsigned short, IODBCPRM * ) ;
FWLIBAPI short WINAPI cnc_rdcomlogmsg( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_rdcomopemsg( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_rdrcvmsg( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_rdsndmsg( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_sendmessage( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_clrmsgbuff( unsigned short, short ) ;
FWLIBAPI short WINAPI cnc_rdrcvstat( unsigned short, unsigned short * ) ;
FWLIBAPI short WINAPI cnc_rdintchk( unsigned short, short, short, short, short, IODBINT * ) ;
FWLIBAPI short WINAPI cnc_wrintchk( unsigned short, short, IODBINT * ) ;
FWLIBAPI short WINAPI cnc_rdintinfo( unsigned short, short * ) ;
FWLIBAPI short WINAPI cnc_gettimer( unsigned short, IODBTIMER * ) ;
FWLIBAPI short WINAPI cnc_settimer( unsigned short, IODBTIMER * ) ;
FWLIBAPI short WINAPI cnc_rdbrstrinfo( unsigned short, ODBBRS * ) ;
FWLIBAPI short WINAPI cnc_rdmenuswitch( unsigned short, short * ) ;
FWLIBAPI short WINAPI cnc_wrmenuswitch( unsigned short, short, short ) ;
FWLIBAPI short WINAPI cnc_rdradofs( unsigned short, ODBROFS * ) ;
FWLIBAPI short WINAPI cnc_rdlenofs( unsigned short, ODBLOFS * ) ;
FWLIBAPI short WINAPI cnc_rdfixcycle( unsigned short, ODBFIX * ) ;
FWLIBAPI short WINAPI cnc_rdcdrotate( unsigned short, ODBROT * ) ;
FWLIBAPI short WINAPI cnc_rd3dcdcnv( unsigned short, ODB3DCD * ) ;
FWLIBAPI short WINAPI cnc_rdmirimage( unsigned short, ODBMIR * ) ;
FWLIBAPI short WINAPI cnc_rdscaling( unsigned short, ODBSCL * ) ;
FWLIBAPI short WINAPI cnc_rd3dtofs( unsigned short, ODB3DTO * ) ;
FWLIBAPI short WINAPI cnc_rdposofs( unsigned short, ODBPOFS * ) ;
FWLIBAPI short WINAPI cnc_rdhpccset( unsigned short, IODBHPST * ) ;
FWLIBAPI short WINAPI cnc_wrhpccset( unsigned short, IODBHPST * ) ;
FWLIBAPI short WINAPI cnc_hpccatset( unsigned short ) ;
FWLIBAPI short WINAPI cnc_rdhpcctupr( unsigned short, IODBHPPR * ) ;
FWLIBAPI short WINAPI cnc_wrhpcctupr( unsigned short, IODBHPPR * ) ;
FWLIBAPI short WINAPI cnc_rdhpcctuac( unsigned short, IODBHPAC * ) ;
FWLIBAPI short WINAPI cnc_wrhpcctuac( unsigned short, IODBHPAC * ) ;
FWLIBAPI short WINAPI cnc_hpccattune( unsigned short, short, short * ) ;
FWLIBAPI short WINAPI cnc_hpccactfine( unsigned short, short * ) ;
FWLIBAPI short WINAPI cnc_hpccselfine( unsigned short, short ) ;
FWLIBAPI short WINAPI cnc_rdactfixofs( unsigned short, short, IODBZOFS * ) ;
FWLIBAPI short WINAPI cnc_rdfixofs( unsigned short, short, short, short, short, IODBZOR * ) ;
FWLIBAPI short WINAPI cnc_wrfixofs( unsigned short, short, IODBZOR * ) ;
FWLIBAPI short WINAPI cnc_rd3dtooltip( unsigned short, ODB3DHDL * ) ;
FWLIBAPI short WINAPI cnc_rd3dpulse( unsigned short, ODB3DPLS * ) ;
FWLIBAPI short WINAPI cnc_rd3dmovrlap( unsigned short, ODB3DHDL * ) ;
FWLIBAPI short WINAPI cnc_rd3dofschg( unsigned short, long * ) ;
FWLIBAPI short WINAPI cnc_clr3dplsmov( unsigned short, short ) ;
FWLIBAPI short WINAPI cnc_startnccmd( unsigned short );
FWLIBAPI short WINAPI cnc_rdprogdir2o8( unsigned short, short, long *, short *, PRGDIR2O8 * ) ;
#define PRGDIR2		PRGDIR2O8
#define cnc_rdprogdir2	cnc_rdprogdir2o8