Agent - fanuc iSeries/Fwlib/150/FWLIB32.BAS


' read the operation mode
Declare Function cnc_rdopmode% Lib "fwlib32.dll" ( ByVal FlibHndl%, a% )

' read the position deviation S
Declare Function cnc_rdposerrs% Lib "fwlib32.dll" ( ByVal FlibHndl%, a& )

' read the position deviation S1 and S2
Declare Function cnc_rdposerrs2% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As ODBPSER )

' read the position deviation Z in the rigid tap mode
Declare Function cnc_rdposerrz% Lib "fwlib32.dll" ( ByVal FlibHndl%, a& )

' read the synchronous error in the synchronous control mode
Declare Function cnc_rdsynerrsy% Lib "fwlib32.dll" ( ByVal FlibHndl%, a& )

' read the synchronous error in the rigid tap mode
Declare Function cnc_rdsynerrrg% Lib "fwlib32.dll" ( ByVal FlibHndl%, a& )

' read the spindle alarm
Declare Function cnc_rdspdlalm% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a$ )

' read the control input signal
Declare Function cnc_rdctrldi% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As ODBSPDI )

' read the control output signal
Declare Function cnc_rdctrldo% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As ODBSPDO )

' read the number of controled spindle
Declare Function cnc_rdnspdl% Lib "fwlib32.dll" ( ByVal FlibHndl%, a% )

' read data from FANUC BUS
Declare Function cnc_rdfbusmem% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c&, ByVal d&, Odb As Any )

' write data to FANUC BUS
Declare Function cnc_wrfbusmem% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c&, ByVal d&, Odb As Any )

' read the parameter of wave diagnosis
Declare Function cnc_rdwaveprm% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As Any )

' write the parameter of wave diagnosis
Declare Function cnc_wrwaveprm% Lib "fwlib32.dll" ( ByVal FlibHndl%, Idb As Any )

' read the parameter of wave diagnosis 2
Declare Function cnc_rdwaveprm2% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As IODBWVPRM )

' write the parameter of wave diagnosis 2
Declare Function cnc_wrwaveprm2% Lib "fwlib32.dll" ( ByVal FlibHndl%, Idb As IODBWVPRM )

' start the sampling for wave diagnosis
Declare Function cnc_wavestart% Lib "fwlib32.dll" ( ByVal FlibHndl% )

' stop the sampling for wave diagnosis
Declare Function cnc_wavestop% Lib "fwlib32.dll" ( ByVal FlibHndl% )

' read the status of wave diagnosis
Declare Function cnc_wavestat% Lib "fwlib32.dll" ( ByVal FlibHndl%, a% )

' read the data of wave diagnosis
Declare Function cnc_rdwavedata% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c&, d&, Odb As Any )

' read program directory 2 data
#If ONO8D Then
Declare Function cnc_rdprogdir2% Lib "fwlib32.dll" Alias "cnc_rdprogdir2o8" (ByVal FlibHndl%, ByVal a%, b&, c%, Odb As PRGDIR2)
#Else
Declare Function cnc_rdprogdir2% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, b%, c%, Odb As PRGDIR2)
#End If

' read M-code group data
Declare Function cnc_rdmgrpdata% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, b%, Odb As ODBMGRP )

' write M-code group data
Declare Function cnc_wrmgrpdata% Lib "fwlib32.dll" ( ByVal FlibHndl%, Idb As IDBMGRP )

' read executing M-code group data
Declare Function cnc_rdexecmcode% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, b%, Odb As ODBEXEM )

' read program re-start M-code group data
Declare Function cnc_rdrstrmcode% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, b%, Odb As ODBRSTRM )

' read process time stamp data
Declare Function cnc_rdproctime% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As ODBPTIME )

' read program directory with process time stamp
Declare Function cnc_rdprgdirtime% Lib "fwlib32.dll" ( ByVal FlibHndl%, a&, b%, Odb As PRGDIRTM )

' read DNC file name for DNC1, DNC2 and OSI-Ethernet
Declare Function cnc_rddncfname% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a$ )

' write DNC file name for DNC1, DNC2 and OSI-Ethernet
Declare Function cnc_wrdncfname% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a$ )

' read communication parameter for DNC1, DNC2 and OSI-Ethernet
Declare Function cnc_rdcomparam% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As IODBCPRM )

' write communication parameter for DNC1, DNC2 and OSI-Ethernet
Declare Function cnc_wrcomparam% Lib "fwlib32.dll" ( ByVal FlibHndl%, Idb As IODBCPRM )

' read log message for DNC2
Declare Function cnc_rdcomlogmsg% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a$ ) 

' read operater message for DNC1 and DNC2
Declare Function cnc_rdcomopemsg% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a$ ) 

' read receive message for OSI-Ethernet
Declare Function cnc_rdrcvmsg% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a$ ) 

' read send message for OSI-Ethernet
Declare Function cnc_rdsndmsg% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a$ ) 

' sending message for OSI-Ethernet
Declare Function cnc_sendmessage% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a$ )

' clear message buffer for OSI-Ethernet
Declare Function cnc_clrmsgbuff% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a% )

' read receive message status for OSI-Ethernet
Declare Function cnc_rdrcvstat% Lib "fwlib32.dll" ( ByVal FlibHndl%, a% )

' transfer file from host to data server
Declare Function cnc_dtsvftpget% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a$, ByVal b$ )

' transfer file from data server to host
Declare Function cnc_dtsvftpput% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a$, ByVal b$ )

' read transfer file status both host and data server
Declare Function cnc_dtsvftpstat% Lib "fwlib32.dll" ( ByVal FlibHndl% )

' read directory in data server
Declare Function cnc_dtsvrdpgdir% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a$, ByVal b%, Odb As ODBDSDIR )

' delete file in data server
Declare Function cnc_dtsvdelete% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a$ )

' download from data server to cnc
Declare Function cnc_dtsvdownload% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a$ )

' upload from cnc to data server
Declare Function cnc_dtsvupload% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a$ )

' cancel upload/download both data server and cnc
Declare Function cnc_dtsvcnclupdn% Lib "fwlib32.dll" ( ByVal FlibHndl% )

' read upload/download status both data server and cnc
Declare Function cnc_dtsvupdnstat% Lib "fwlib32.dll" ( ByVal FlibHndl% )

' read file name for data server dnc
Declare Function cnc_dtsvgetdncpg% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a$ )

' write file name for data server dnc
Declare Function cnc_dtsvsetdncpg% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a$ )

' read setting data for data server
Declare Function cnc_dtsvrdset% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As IODBDSSET )

' write setting data for data server
Declare Function cnc_dtsvwrset% Lib "fwlib32.dll" ( ByVal FlibHndl%, Idb As IODBDSSET )

' check hard disk for data server
Declare Function cnc_dtsvchkdsk% Lib "fwlib32.dll" ( ByVal FlibHndl% )

' format hard disk for data server
Declare Function cnc_dtsvhdformat% Lib "fwlib32.dll" ( ByVal FlibHndl% )

' write interface area for data server
Declare Function cnc_dtsvsavecram% Lib "fwlib32.dll" ( ByVal FlibHndl% )

' read  interface area for data server
Declare Function cnc_dtsvrdcram% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a&, b&, ByVal c$ )

' read maintanance information for data server
Declare Function cnc_dtsvmntinfo% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As ODBDSMNT )

' read data server mode
Declare Function cnc_dtsvgetmode% Lib "fwlib32.dll" ( ByVal FlibHndl%, a% )

' change data server mode
Declare Function cnc_dtsvsetmode% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a% )

' read error message for data server
Declare Function cnc_dtsvrderrmsg% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b$ )

' read block re-start information
Declare Function cnc_rdbrstrinfo% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As ODBBRS )

' read menu switch signal
Declare Function cnc_rdmenuswitch% Lib "fwlib32.dll" ( ByVal FlibHndl%, a% )

' write menu switch signal
Declare Function cnc_wrmenuswitch% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b% )

' read tool radius offset for position data
Declare Function cnc_rdradofs% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As ODBROFS )

' read tool length offset for position data
Declare Function cnc_rdlenofs% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As ODBLOFS )

' read fixed cycle for position data
Declare Function cnc_rdfixcycle% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As ODBFIX )

' read coordinate rotate for position data
Declare Function cnc_rdcdrotate% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As ODBROT )

' read 3D coordinate convert for position data
Declare Function cnc_rd3dcdcnv% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As ODB3DCD )

' read programable mirror image for position data
Declare Function cnc_rdmirimage% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As ODBMIR )

' read scaling for position data
Declare Function cnc_rdscaling% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As ODBSCL )

' read 3D tool offset for position data
Declare Function cnc_rd3dtofs% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As ODB3DTO )

' read tool position offset for position data
Declare Function cnc_rdposofs% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As ODBPOFS )

' read hpcc setting data
Declare Function cnc_rdhpccset% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As IODBHPST )

' write hpcc setting data
Declare Function cnc_wrhpccset% Lib "fwlib32.dll" ( ByVal FlibHndl%, Idb As IODBHPST )

' hpcc data auto setting data
Declare Function cnc_hpccatset% Lib "fwlib32.dll" ( ByVal FlibHndl% )

' read hpcc tuning data ( parameter input )
Declare Function cnc_rdhpcctupr% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As IODBHPPR )

' write hpcc tuning data ( parameter input )
Declare Function cnc_wrhpcctupr% Lib "fwlib32.dll" ( ByVal FlibHndl%, Idb As IODBHPPR )

' read hpcc tuning data ( acc input )
Declare Function cnc_rdhpcctuac% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As IODBHPAC )

' write hpcc tuning data ( acc input )
Declare Function cnc_wrhpcctuac% Lib "fwlib32.dll" ( ByVal FlibHndl%, Idb As IODBHPAC )

' hpcc data auto tuning
Declare Function cnc_hpccattune% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, b% )

' read hpcc fine level
Declare Function cnc_hpccactfine% Lib "fwlib32.dll" ( ByVal FlibHndl%, a% )

' select hpcc fine level
Declare Function cnc_hpccselfine% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a% )

' read active fixture offset
Declare Function cnc_rdactfixofs% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, Odb As IODBZOFS )

' read fixture offset
Declare Function cnc_rdfixofs% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c%, ByVal d%, Odb As IODBZOFS )

' write fixture offset
Declare Function cnc_wrfixofs% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, Idb As IODBZOFS )

' read interrupt check
Declare Function cnc_rdintchk% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c%, ByVal d%, Odb As IODBINT )

' write interrupt check
Declare Function cnc_wrintchk% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a%, Idb As IODBINT )

' read interrupt check information
Declare Function cnc_rdintinfo% Lib "fwlib32.dll" ( ByVal FlibHndl%, a% )

' read tip of tool for 3D hundle
Declare Function cnc_rd3dtooltip% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As Any )

' read pulse for 3D hundle
Declare Function cnc_rd3dpulse% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As Any )

' read move overrlap of tool for 3D hundle
Declare Function cnc_rd3dmovrlap% Lib "fwlib32.dll" ( ByVal FlibHndl%, Odb As Any )

' read change offset for 3D hundle
Declare Function cnc_rd3dofschg% Lib "fwlib32.dll" ( ByVal FlibHndl%, a& )

' clear pulse and change offset for 3D hundle
Declare Function cnc_clr3dplsmov% Lib "fwlib32.dll" ( ByVal FlibHndl%, ByVal a% )

' get date and time from cnc
Declare Function cnc_gettimer% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As Any)

' set date and time for cnc
Declare Function cnc_settimer% Lib "fwlib32.dll" (ByVal FlibHndl%, Idb As Any)


'---------------------------
' CNC : NC display function
'---------------------------

' Start NC display
Declare Function cnc_startnccmd% Lib "fwlib32.dll" ( ByVal FlibHndl% )
